# GASOOL

./: README.md
gasool-1.06/: AUTHORS  COPYING  CURL  INSTALL  Makefile.in  README  THANKS  config.h.in  configure  configure.ac
gasool-1.06/src/: gasool.c  gasool.h
